# skyrmion_solver

./: README.md  example.ipynb  pyproject.toml
.github/workflows/: python-publish.yml
skyrmion_solver/core/: derivatives.py  integrator.py  io.py  params.py  simulation.py  utils.py
skyrmion_solver/examples/: berger_skyrme_gl.py  coulomb_skyrme_gl.py  lightly_bound_skyrme_gl.py  nuclear_skyrme_gl.py  omega_skyrme_gl.py  rho_skyrme_gl.py
skyrmion_solver/theories/: __init__.py  registry.py
skyrmion_solver/theories/berger_skyrme/: __init__.py  initial_config.py  instructions.py  io.py  kernels.py  observables.py  params.py  render_gl.py
skyrmion_solver/theories/coulomb_skyrme/: __init__.py  initial_config.py  instructions.py  io.py  kernels.py  observables.py  params.py  render_gl.py
skyrmion_solver/theories/lightly_bound_skyrme/: __init__.py  initial_config.py  instructions.py  io.py  kernels.py  observables.py  params.py  render_gl.py
skyrmion_solver/theories/nuclear_skyrme/: __init__.py  initial_config.py  instructions.py  io.py  kernels.py  observables.py  params.py  render_gl.py
skyrmion_solver/theories/omega_skyrme/: __init__.py  initial_config.py  instructions.py  io.py  kernels.py  observables.py  params.py  render_gl.py
skyrmion_solver/theories/rho_skyrme/: __init__.py  initial_config.py  instructions.py  io.py  kernels.py  observables.py  params.py  render_gl.py
skyrmion_solver/visualization/: gl_backend.py
